# chat

./: Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  protocol.rs  ui.rs
src/network/: client.rs  discovery.rs  mod.rs  server.rs
