[package]
name = "lan-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
ratatui = "0.28"
crossterm = { version = "0.27", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
whoami = "1.4"
local-ip = "0.1"